feat: add loading

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,3 +12,16 @@
 .leaflet-bottom {
   z-index: 0 !important;
 }
+
+.animate-progress {
+  animation: progress 2s linear infinite;
+}
+
+@keyframes progress {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
